--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
     <title>Title</title>
     <link rel="stylesheet" href="style/all.min.css">
     <link rel="stylesheet" href="style/about.css">
+    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/slick.css">
-
+    <link rel="stylesheet" href="style/bootstrap.min.css">
 </head>
 <body>
 <div class="wrapper">
@@ -26,9 +27,6 @@
                         <a class="tel" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
                     </div>
                 </div>
-                <button class="btn">
-                    <a href="tel:+996 (559) 18 00 33">Заказать звонок</a>
-                </button>
             </div>
         </div>
     </header>
@@ -573,6 +571,7 @@
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="js/slick.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/all.min.js"></script>
 <script src="js/script.js"></script>
 </body>
