--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/all.min.css">
     <link rel="stylesheet" href="style/media.css">
@@ -11,21 +12,23 @@
 <div class="wrapper">
     <header id="header">
         <div class="container">
-            <div class="nav">
+            <div class="navbar">
                 <img src="./img/Group%206058.svg" alt="">
                 <div class="nav--one">
-                    <div class="page">
-                        <div class="link"></div>
-                        <p class="pro">Звоните, мы работаем с 8.00-18.00</p>
+                    <div class="step">
+                        <div class="page">
+                            <div class="link"></div>
+                            <p class="pro">Звоните, мы работаем с 8.00-18.00</p>
+                        </div>
+                        <div class="page__one">
+                            <i class="fas fa-phone"></i>
+                            <a class="tel-block" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
+                        </div>
                     </div>
-                    <div class="page__one">
-                        <i class="fas fa-phone"></i>
-                        <a class="tel" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
-                    </div>
+                    <button class="btn">
+                        <a href="tel:+996 (559) 18 00 33">Заказать звонок</a>
+                    </button>
                 </div>
-                <button class="btn">
-                    <a href="tel:+996 (559) 18 00 33">Заказать звонок</a>
-                </button>
             </div>
         </div>
     </header>
@@ -120,7 +123,7 @@
                 <div class="file">
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -128,7 +131,7 @@
                     </div>
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -136,7 +139,7 @@
                     </div>
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -144,7 +147,7 @@
                     </div>
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -152,7 +155,7 @@
                     </div>
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -160,7 +163,7 @@
                     </div>
                     <div>
                         <div class="lani">
-                            <img class="img__one" src="./img/10.svg" alt="">
+                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -370,6 +373,7 @@
     </div>
 </div>
 
+<script src="js/bootstrap.min.js"></script>
 <script src="js/all.min.js"></script>
 <script src="js/script.js"></script>
 </body>
