--- a/about.html
+++ b/about.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
     <link rel="stylesheet" href="style/all.min.css">
     <link rel="stylesheet" href="style/about.css">
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/slick.css">
     <link rel="stylesheet" href="style/bootstrap.min.css">
 </head>
@@ -18,14 +20,19 @@
                     <img class="logo" src="./img/Group%206058.svg" alt="">
                 </a>
                 <div class="nav--one">
-                    <div class="page">
-                        <div class="link"></div>
-                        <p class="pro">Звоните, мы работаем с 8.00-18.00</p>
-                    </div>
-                    <div class="page__one">
-                        <i class="fas fa-phone"></i>
-                        <a class="tel" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
-                    </div>
+                  <div class="code">
+                      <div class="page">
+                          <div class="link"></div>
+                          <p class="pro">Звоните, мы работаем с 8.00-18.00</p>
+                      </div>
+                      <div class="page__one">
+                          <i class="fas fa-phone"></i>
+                          <a class="tel" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
+                      </div>
+                  </div>
+                    <button class="btn1">
+                        <a href="tel:996 (559) 18 00 33">Заказать звонок</a>
+                    </button>
                 </div>
             </div>
         </div>
