--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Title</title>
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -13,16 +16,16 @@
     <header id="header">
         <div class="container">
             <div class="navbar">
-                <img src="./img/Group%206058.svg" alt="">
-                <div class="nav--one">
-                    <div class="step">
-                        <div class="page">
+                <img class="logo" src="./img/Group%206058.svg" alt="Group">
+                <div class="nav">
+                    <div class="big">
+                        <div class="lani-one">
                             <div class="link"></div>
-                            <p class="pro">Звоните, мы работаем с 8.00-18.00</p>
+                            <h6 class="you">Звоните, мы работаем с 8.00-18.00</h6>
                         </div>
-                        <div class="page__one">
+                        <div class="fas-hai">
                             <i class="fas fa-phone"></i>
-                            <a class="tel-block" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
+                            <a class="hand" href="tel:+996 (559) 18 00 33 ">+996 (559) 18 00 33 </a>
                         </div>
                     </div>
                     <button class="btn">
@@ -31,15 +34,15 @@
                 </div>
             </div>
         </div>
+        <div class="forms"></div>
     </header>
     <main id="main">
         <div class="container">
             <div class="flex">
-                <h1 class="sit">Lorem ipsum dolor sit</h1>
-                <h1 class="sit">amet consectetur</h1>
+                <h1 class="sit">Lorem ipsum dolor sit amet consectetur</h1>
             </div>
             <div class="ced-one">
-                <p class="ced">Сed do eiusmod tempor incididunt ut labore et dolore magna <br>
+                <p class="ced">Сed do eiusmod tempor incididunt ut labore et dolore magna
                     aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
             </div>
             <div class="block">
@@ -72,30 +75,31 @@
             <div class="blocks">
                 <div class="blocks-one">
                     <h1 class="logon">НЕСКОЛЬКО СЛОВ О НАШИХ КУРСАХ</h1>
-                    <h1 class="big">Neque porro </h1>
-                    <h1 class="big">quisquam estqui </h1>
-                    <h1 class="big">dolorem</h1>
-                    <p class="project">Sed ut perspiciatis unde omnis iste natus error sit voluptatem <br>
-                        accusantium <span class="span">doloremque laudantium,</span> totam rem aperiam, eaque <br>
-                        ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae <br>
+                    <h1 class="big-ipsa">Neque porro quisquam estqui dolorem</h1>
+                    <p class="project">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                        accusantium <span class="span">doloremque laudantium,</span> totam rem aperiam, eaque
+                        ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
                         dicta sunt explicabo. <span class="span">Nemo enim ipsam</span> voluptatem quia voluptas sit
-                        <br>
                         aspernatur aut odit <span class="span">aut fugit, sed quia </span></p>
                     <div>
                         <div class="quasi">
-                            <img src="./img/Vector.svg" alt="">
-                            <p class="ret">Ret quasi architecto beatae </p>
-                            <p class="ret"><span class="sunt">vitae dicta sunt explicabo.</span> Nemo </p>
+                            <p class="ret">
+                                <img src="./img/Vector.svg" alt="">
+                                Ret quasi architecto beatae <span class="sunt">vitae dicta sunt explicabo.</span> Nemo
+                                enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut <br>
+                                fugit, sed quia
+                            </p>
                         </div>
-                        <p class="ring">enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut <br>
-                            fugit, sed quia </p>
                     </div>
                 </div>
                 <div class="black">
                     <h6 class="code">Хочешь понимать весь код? <br> Читай ниже!</h6>
                     <img class="image" src="./img/вфцвфцвфцвцфв%201.svg" alt="">
                 </div>
-                <img class="img" src="./img/1.svg" alt="">
+                <picture>
+                    <source  media="(max-width:414px)" srcset="./img/love.svg">
+                    <img class="img" src="./img/1.svg" alt="">
+                </picture>
             </div>
         </div>
     </section>
@@ -117,53 +121,67 @@
         <div class="content">
             <div class="container">
                 <div class="amet-one">
-                    <h1 class="amet">Lorem ipsum <span class="dolor">dolor sit amet </span></h1>
-                    <h1 class="amet"> consectetur adipiscing</h1>
+                    <h1 class="amet">Lorem ipsum
+                        <span class="dolor">dolor sit amet </span>
+                        consectetur adipiscing
+                    </h1>
                 </div>
                 <div class="file">
                     <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
+                       <div class="eum">
+                           <div class="lani">
+                               <img class="img__one" src="./img/line.svg" alt="">
+                           </div>
+                       </div>
+                        <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
+                        <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
+                            doloremque laudantium</p>
+                    </div>
+                    <div>
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line1.svg" alt="">
+                            </div>
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
                     </div>
                     <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line-2.svg" alt="">
+                            </div>
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
                     </div>
                     <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line7.svg" alt="">
+                            </div>
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
                     </div>
                     <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
-                        </div>
+                       <div class="eum">
+                           <div class="lani">
+                               <img class="img__one" src="./img/line8.svg" alt="">
+                           </div>
+                       </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
                     </div>
                     <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
-                        </div>
-                        <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
-                        <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
-                            doloremque laudantium</p>
-                    </div>
-                    <div>
-                        <div class="lani">
-                            <img class="img__one" src="../SCHOOL_IT/img/10.svg" alt="">
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line9.svg" alt="">
+                            </div>
                         </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
@@ -192,7 +210,7 @@
                     </div>
                 </div>
                 <div class="current">
-                    <img class="image__one" src="./img/Rectangle%2017.svg" alt="">
+                    <img class="image__one" src="./img/Rectangle%2018.svg" alt="">
                     <p class="ours">Старт курса 15 октября</p>
                     <h1 class="ours enum">Основы программирования</h1>
                     <p class="ours anim">Сed do eiusmod tempor incididunt ut labore et <br>
@@ -207,7 +225,7 @@
                     </div>
                 </div>
                 <div class="current">
-                    <img class="image__one" src="./img/Rectangle%2017.svg" alt="">
+                    <img class="image__one" src="./img/Rectangle%2019.svg" alt="">
                     <p class="ours">Старт курса 15 октября</p>
                     <h1 class="ours enum">Основы программирования</h1>
                     <p class="ours anim">Сed do eiusmod tempor incididunt ut labore et <br>
@@ -224,7 +242,7 @@
             </div>
             <div class="wrung__one">
                 <div class="current">
-                    <img class="image__one" src="./img/Rectangle%2017.svg" alt="">
+                    <img class="image__one" src="./img/Rectangle%2026.svg" alt="">
                     <p class="ours">Старт курса 15 октября</p>
                     <h1 class="ours enum">Основы программирования</h1>
                     <p class="ours anim">Сed do eiusmod tempor incididunt ut labore et <br>
@@ -239,7 +257,7 @@
                     </div>
                 </div>
                 <div class="current">
-                    <img class="image__one" src="./img/Rectangle%2017.svg" alt="">
+                    <img class="image__one" src="./img/Rectangle%2027.svg" alt="">
                     <p class="ours">Старт курса 15 октября</p>
                     <h1 class="ours enum">Основы программирования</h1>
                     <p class="ours anim">Сed do eiusmod tempor incididunt ut labore et <br>
@@ -297,11 +315,11 @@
                     <img class="edit" src="./img/2003.svg" alt="">
                 </div>
                 <div class="iframes">
-                    <img class="leave" src="./img/Rectangle%2020.svg" alt="">
+                    <img class="leave" src="./img/Rectangle%2015.svg" alt="">
                     <img class="edit" src="./img/2003.svg" alt="">
                 </div>
                 <div class="iframes">
-                    <img class="leave" src="./img/Rectangle%2020.svg" alt="">
+                    <img class="leave" src="./img/Rectangle%2016.svg" alt="">
                     <img class="edit" src="./img/2003.svg" alt="">
                 </div>
             </div>
