<Meaningful commit message here>

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img class="image" src="./img/вфцвфцвфцвцфв%201.svg" alt="">
                 </div>
                 <picture>
-                    <source  media="(max-width:414px)" srcset="./img/love.svg">
+                    <source media="(max-width:414px)" srcset="./img/love.svg">
                     <img class="img" src="./img/1.svg" alt="">
                 </picture>
             </div>
@@ -111,10 +111,10 @@
             <div>//</div>
             <h6>Методика обучения</h6>
             <div>//</div>
-            <h6>Методика обучения</h6>
-            <div>//</div>
-            <h6>Методика обучения</h6>
-            <div>//</div>
+            <h6 class="have">Методика обучения</h6>
+            <div class="have">//</div>
+            <h6 class="have">Методика обучения</h6>
+            <div class="have">//</div>
         </div>
     </section>
     <section id="content">
@@ -128,11 +128,11 @@
                 </div>
                 <div class="file">
                     <div>
-                       <div class="eum">
-                           <div class="lani">
-                               <img class="img__one" src="./img/line.svg" alt="">
-                           </div>
-                       </div>
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line.svg" alt="">
+                            </div>
+                        </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
@@ -168,11 +168,11 @@
                             doloremque laudantium</p>
                     </div>
                     <div>
-                       <div class="eum">
-                           <div class="lani">
-                               <img class="img__one" src="./img/line8.svg" alt="">
-                           </div>
-                       </div>
+                        <div class="eum">
+                            <div class="lani">
+                                <img class="img__one" src="./img/line8.svg" alt="">
+                            </div>
+                        </div>
                         <h1 class="vel">Quis autem vel eum iure <br> reprehenderit qui</h1>
                         <p class="under">Sed ut perspiciatis unde omnis iste natus error sit <br> voluptatem accusantium
                             doloremque laudantium</p>
@@ -295,19 +295,20 @@
             <h6>Методика обучения</h6>
             <div>//</div>
             <h6>Методика обучения</h6>
-            <div>//</div>
-            <h6>Методика обучения</h6>
-            <div>//</div>
-            <h6>Методика обучения</h6>
-            <div>//</div>
+            <h6 class="have">Методика обучения</h6>
+            <div class="have">//</div>
+            <h6 class="have">Методика обучения</h6>
+            <div class="have">//</div>
         </div>
     </section>
     <footer id="footer">
         <div class="container">
             <div class="back--one">
-                <h1 class="back">Наши студенты делятся </h1>
-                <h1 class="back">своими <span class="eou">впечатлениями</span> о </h1>
-                <h1 class="back">наших курсах</h1>
+                <h1 class="back">
+                    Наши студенты делятся
+                    своими <span class="eou">впечатлениями</span> о
+                    наших курсах
+                </h1>
             </div>
             <div class="leave-one">
                 <div class="iframes">
