<Meaningful commit message here>

--- a/index.html
+++ b/index.html
@@ -239,8 +239,6 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            <div class="wrung__one">
                 <div class="current">
                     <img class="image__one" src="./img/Rectangle%2026.svg" alt="">
                     <p class="ours">Старт курса 15 октября</p>
@@ -361,7 +359,7 @@
                     <p class="once">Приезжайте к нам в офис</p>
                     <img class="gle" src="./img/Rectangle%2039.svg" alt="">
                     <div>
-                        <img class="gle" src="./img/Rectangle%2039.svg" alt="">
+                        <img class="gle1" src="./img/Rectangle%2039.svg" alt="">
                     </div>
                 </div>
                 <div class="shock">
