<Meaningful commit message here>

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Title</title>
     <link rel="stylesheet" href="style/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/slick.css">
     <link rel="stylesheet" href="style/all.min.css">
     <link rel="stylesheet" href="style/media.css">
 </head>
@@ -390,7 +391,6 @@
     </div>
 </div>
 
-<script src="js/bootstrap.min.js"></script>
 <script src="js/all.min.js"></script>
 <script src="js/script.js"></script>
 </body>
